# SFML-game

./: CMakeLists.txt
app/: CMakeLists.txt
app/src/: ibutton.h  idrawable.h  irenderer.h  main.cpp  mainwindow.cpp  mainwindow.h
app/src/event/: eventhandler.cpp  eventhandler.h
app/src/event/keyevents/: keyboard.h  keypressevent.cpp  keypressevent.h  keyreleaseevent.cpp  keyreleaseevent.h
app/src/event/mouseevents/: mouse.h  mousemoveevent.cpp  mousemoveevent.h  mousepressevent.cpp  mousepressevent.h  mousereleaseevent.cpp  mousereleaseevent.h
app/src/geometry/: alignment.h  point.h  rect.h  size.h  utils.cpp  utils.h
app/src/layout/: layout.cpp  layout.h  verticallayout.cpp  verticallayout.h
app/src/menu/: gamemenu.cpp  gamemenu.h  menu.cpp  menu.h
app/src/scene/: itemcontext.h  scene.cpp  scene.h
app/src/scene/animation/: animation.cpp  animation.h
app/src/scene/items/: collisionItem.cpp  collisionItem.h  collisionhandler.h  collisionitem.h  drawable.h  item.cpp  item.h  testitem.cpp  testitem.h
app/src/scene/items/button/: textbutton.cpp  textbutton.h
app/src/scene/items/player/: player.cpp  player.h
app/src/scene/items/rectangles/: collisionrect.cpp  collisionrect.h  rect.cpp  rect.h
app/src/scene/textures/: textures.cpp  textures.h
app/src/scene/visitors/: defaultvisitor.cpp  defaultvisitor.h  ivisitor.h  sortitemsvisitor.cpp  sortitemsvisitor.h
app/src/view/: gameview.cpp  gameview.h  iview.h  menuview.cpp  menuview.h  sceneview.cpp  sceneview.h  view.cpp  view.h
